fixed spacing issue on radio pill selector and their associated modal hint button

--- a/app/src/components/radio-pill-selector.module.css
+++ b/app/src/components/radio-pill-selector.module.css
@@ -1,7 +1,7 @@
 .wrapper {
     padding: 0;
     margin-bottom: 0.2em;
-    flex:1;
+    /* flex:1; */
     /* margin: 1em 0em 1.5em 2em; */
 }
 
